# tau-settings

./: .gitignore  Makefile  anda.hcl  meson.build  tau-settings.spec
.github/workflows/: codeql.yml  package.yml
build-aux/flatpak/: org.gnome.Settings.json
panels/: meson.build
panels/applications/: cc-applications-panel.c  cc-applications-panel.ui
panels/background/: cc-background-panel.c  cc-background-panel.ui  cc-background-preview.c  cc-background-preview.ui  cc-color-button.c  cc-color-button.h  meson.build  preview.css
panels/common/: cc-permission-infobar.ui
panels/display/: cc-display-panel.c  cc-display-panel.ui
panels/dock/: cc-dock-panel.c  cc-dock-panel.h  cc-dock-panel.ui  dock.css  dock.gresource.xml  gnome-dock-panel.desktop.in.in  meson.build  test.ui
panels/dock/icons/: meson.build
panels/extensions/: cc-extensions-panel.c  cc-extensions-panel.h  cc-extensions-panel.ui  cc-extensions-row.ui  extensions.gresource.xml  gnome-extensions-panel.desktop.in.in  meson.build
panels/firmware-updates/: cc-firmware-updates-panel.c  cc-firmware-updates-panel.h  cc-firmware-updates-panel.ui  firmware-updates.gresource.xml  gnome-firmware-updates-panel.desktop.in.in  meson.build
panels/firmware-updates/icons/: meson.build
panels/fyra-accounts/: cc-fyra-accounts-panel.c  cc-fyra-accounts-panel.h  cc-fyra-accounts-panel.ui  fyra-accounts.gresource.xml  gnome-fyra-accounts-panel.desktop.in.in  meson.build
panels/fyra-accounts/icons/: meson.build
panels/info-overview/: cc-info-overview-panel.c  cc-info-overview-panel.ui  info-cleanup.c  meson.build
panels/mouse/: cc-mouse-panel.c  cc-mouse-panel.ui
panels/network/: cc-wifi-panel.c  cc-wifi-panel.ui  network-wifi.ui
panels/network/connection-editor/: ce-page-ip4.c
panels/notifications/: cc-notifications-panel.c  cc-notifications-panel.ui
panels/online-accounts/: cc-online-accounts-panel.ui
panels/printers/: cc-printers-panel.c
panels/system/: cc-system-panel.c  cc-system-panel.h  cc-system-panel.ui  gnome-system-panel.desktop.in.in  meson.build
panels/user-accounts/: cc-user-panel.ui
po/: af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fur.po  ga.po  gd.po  gl.po  gnome-control-center-2.0.pot  gu.po  (+66 more)
shell/: cc-application.c  cc-application.h  cc-panel-list.c  cc-panel-list.h  cc-panel-list.ui  cc-panel-loader.c  cc-panel-loader.h  cc-panel.c  cc-panel.h  cc-panel.ui  cc-window.c  cc-window.h  cc-window.ui  gnome-control-center.gresource.xml  style-dark.css  style.css
subprojects/: gvc.wrap
tests/info/: info-cleanup-test.txt  meson.build
